--- a/static/myCreatedEvents.handlebars
+++ b/static/myCreatedEvents.handlebars
@@ -43,6 +43,7 @@
   <p>You have not created any events yet.</p>
   {{/if}}
 
-  <a href="/create">Create New Event</a>
+  <a href="/create">Create New Event</a></br>
+  <a href = "/login">Back To Homepage</a>
 </body>
 </html>
